<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apps.enigma.aboutyourself.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/permission_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/permission_text"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="enablePermission"
            android:layout_height="wrap_content"
            android:text="@string/click_permission_text"/>

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_today_text"
            android:layout_width="192dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="39dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/top_header_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_total_usage_time"
            android:layout_width="224dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_text"
            tools:text="3h45m" />

        <TextView
            android:id="@+id/tv_total_usage_text"
            android:layout_width="310dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:text="@string/mobile_usage"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_usage_time" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintGuide_end="192dp"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tv_which_is"
            android:layout_width="108dp"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="15dp"
            android:text="@string/which_is"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_usage_text" />


        <LinearLayout
            android:id="@+id/pb_usage_percent"
            android:layout_width="178dp"
            android:layout_height="246dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_which_is">


            <me.itangqi.waveloadingview.WaveLoadingView
                android:id="@+id/wave_loading_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:wlv_borderColor="@color/colorAccent"
                app:wlv_borderWidth="3dp"
                app:wlv_round_rectangle="true"
                app:wlv_shapeType="circle"
                app:wlv_titleBottomColor="@android:color/white"
                app:wlv_titleBottomSize="24sp"
                app:wlv_titleBottomStrokeColor="@color/colorPrimaryDark"
                app:wlv_titleBottomStrokeWidth="3dp"
                app:wlv_titleCenterColor="@android:color/white"

                app:wlv_titleCenterSize="24sp"
                app:wlv_titleCenterStrokeColor="@color/colorPrimaryDark"
                app:wlv_titleCenterStrokeWidth="3dp"
                app:wlv_titleTopColor="@android:color/white"


                app:wlv_titleTopSize="24sp"
                app:wlv_titleTopStrokeColor="@color/colorPrimaryDark"
                app:wlv_titleTopStrokeWidth="3dp"
                app:wlv_triangle_direction="north"

                app:wlv_waveAmplitude="60"
                app:wlv_waveColor="@color/colorAccent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/total_time" />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_top5_app_text"
            android:layout_width="89dp"
            android:layout_height="17dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/top_5_app_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_which_is"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_which_is"
            app:layout_constraintVertical_bias="0.527" />


        <ListView
            android:id="@+id/lv_top5_apps"
            android:layout_width="178dp"
            android:layout_height="246dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/pb_usage_percent"
            android:layout_marginTop="8dp" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>